<resources>
    <string name="app_name">Log in and sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="your_journey_awaits">Your journey awaits!</string>
    <string name="resgister">Resgister</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="username1">Username</string>
    <string name="login1">LOGIN</string>
    <string name="password1">password</string>
    <string name="password2">Password</string>
    <string name="username">Username</string>
    <string name="email1">Email</string>
    <string name="password3">Password</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="log_in">LOG IN</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="submit">submit</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
    <string name="todo4">TODO</string>
    <string name="log_out">Log out</string>
    <string name="todo89">TODO</string>
    <string name="todo223">TODO</string>
    <string name="btn">TODO</string>
    <string name="btn7">TODO</string>
    <string name="todo0">TODO</string>
    <string name="student_personal_details">Student Personal Details</string>
    <string name="bbt">TODO</string>
    <string name="bbt4">TODO</string>
    <string name="btt">TODO</string>
    <string name="tyty">TODO</string>
    <string name="order">ORDER</string>
    <string name="adobo">ADOBO</string>
    <string name="noypi_food">Noypi Food</string>
    <string name="tapsilog">Tapsilog</string>
    <string name="sinigang">Sinigang</string>
    <string name="kare_kare">Kare Kare</string>
    <string name="button">Button</string>
    <string name="personal_info">Personal Info</string>
    <string name="food_order">Food Order</string>
    <string name="email3">Email</string>
    <string name="description">Description</string>
    <string name="order_summary">Order Summary:</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="qty">QTY</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="total">Total</string>
</resources>