<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/baseline_account_circle_24"
            android:contentDescription="@string/todo2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,TextSizeCheck" />

        <EditText
            android:id="@+id/email_add_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/email3"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:backgroundTint="#1D2671"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/login_button"
            />

        <Button
            android:id="@+id/REG_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1D2671"
            android:padding="10dp"
            android:text="@string/resgister"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

</RelativeLayout>