<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password3"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/secondary"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/tertiary"
        app:layout_constraintEnd_toEndOf="@+id/editTextText1"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/editTextText1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/comfirm_password"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/secondary"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/tertiary"
        app:layout_constraintBottom_toTopOf="@+id/register_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:layout_constraintVertical_bias="0.213"
        tools:ignore="DuplicateIds,LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="244dp"
        android:autofillHints="Email"
        android:background="@drawable/border"


        android:ems="10"
        android:hint="@string/email1"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginTop="124dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/register_button1"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:backgroundTint="#1D2671"
        android:text="@string/resgister"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:layout_constraintVertical_bias="0.371" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="316dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="244dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_alternate_email_24"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="388dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_assignment_late_24"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="464dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_assignment_late_24"
        tools:ignore="DuplicateIds" />

</androidx.constraintlayout.widget.ConstraintLayout>

