<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context=".HomeActivity">

    <EditText
        android:id="@+id/Student"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="604dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Student No."
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="277dp"
        android:layout_height="48dp"


        android:layout_marginTop="224dp"
        android:autofillHints="Address"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="288dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="348dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="412dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Contact No."
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/Birthdate"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="476dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Hobbies"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds,HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/Hobbies"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="540dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Birthdate"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/register_button1"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:layout_marginTop="684dp"
        android:backgroundTint="#14BA1B"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/add"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginTop="772dp"
        android:backgroundTint="#14BA1B"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/delete"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginTop="772dp"
        android:backgroundTint="#F11C0D"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="46dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/Name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        app:srcCompat="@drawable/baseline_account_circle_24"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="44dp"
        android:layout_height="37dp"
        android:layout_marginTop="232dp"
        app:layout_constraintEnd_toStartOf="@+id/Address"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_map"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo0" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toStartOf="@+id/Age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_accessibility_24"
        tools:ignore="ContentDescription,DuplicateIds" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="352dp"
        app:layout_constraintEnd_toStartOf="@+id/Email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_email_24"
        tools:ignore="ContentDescription,DuplicateIds" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="416dp"
        app:layout_constraintEnd_toStartOf="@+id/Contact"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_contact_phone_24"
        tools:ignore="DuplicateIds"
        android:contentDescription="@string/todo89" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="480dp"
        app:layout_constraintEnd_toStartOf="@+id/Birthdate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_color_lens_24"
        tools:ignore="DuplicateIds"
        android:contentDescription="@string/todo223" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="544dp"
        app:layout_constraintEnd_toStartOf="@+id/Hobbies"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_date_range_24"
        tools:ignore="DuplicateIds"
        android:contentDescription="@string/btn" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="608dp"
        app:layout_constraintEnd_toStartOf="@+id/Student"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_contact_emergency_24"
        tools:ignore="DuplicateIds"
        android:contentDescription="@string/btn7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="364dp"
        android:layout_height="127dp"
        android:fontFamily="@font/bungee_inline"
        android:shadowColor="@color/white"
        android:text="@string/student_personal_details"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>